objects/adapps__OptimizerPlus_Unused_Dashboards_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Description__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__LastModifiedDate__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__LastRun__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__LastView__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__ModifierUser__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Unused_Dashboards__c</fullName>
        <label>Unused Dashboards</label>
        <referenceTo>adapps__OptimizerPlus_Unused_Dashboards__c</referenceTo>
        <relationshipLabel>Unused Dashboards Items</relationshipLabel>
        <relationshipName>Unused_Dashboards_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Unused Dashboards Item</label>
    <nameField>
        <label>Unused Dashboards Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unused Dashboards Item Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>